--- a/index.html
+++ b/index.html
@@ -143,41 +143,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
     <div class="col-lg-5" style="margin-left: 2%;">
          <section class="blog py-4" id="About Us" style="margin-left: 0%;">
-    <div class="container py-md-5" style="margin-center: 10px;">
-        <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
+            <div class="container py-md-5" style="margin-left: 10px;">
+                <div class="content-box">
+                    <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
                     <h3 class="title mt-3">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
                     <p class="paragraph mt-4">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                 </div>
             </div>
         </section>
     </div>
-</body>
-
-     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box with Fixed Alignment</title>
-    <style>
-        .content-box {
-            border: 2px solid #ccc;
-            width: 300px;
-            padding: 20px;
-            margin: 20px auto;
-            text-align: center; /* Center align content */
-        }
-
-        .title {
-            color: #000000;
-            margin-right: auto; /* Set left margin to auto for center alignment */
-            margin-right: auto; /* Set right margin to auto for center alignment */
-        }
-
-        .paragraph {
-            margin-right: -50px; /* Adjust margin as needed */
-        }
-    </style>
-</head>
-<body>
     <div class="col-lg-5" style="margin-right: 0%;">
         <section class="blog py-4" id="Services" style="margin-right: 0%;">
             <div class="container py-md-5" style="margin-right: 10px;">
@@ -194,7 +168,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </section>
     </div>
 </body>
-
-
+</body>
 
 </html>
