--- a/index.html
+++ b/index.html
@@ -116,58 +116,47 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //Banner -->
 
     <!-- Core Values -->
-	    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box with Fixed Alignment</title>
-    <style>
-        .content-box {
-            border: 2px solid #ccc;
-            width: 300px;
-            padding: 20px;
-            margin: 20px auto;
-            text-align: center; /* Center align content */
-        }
+	    <div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <section class="core-value py-5" id="About Us">
+                <div class="container py-md-4">
+                    <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+                    <div class="row core-grids justify-content-left">
+                        <div class="col-lg-12 core-left">
+                           <h3 class="mt-4" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+                           <p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
-        .title {
-            color: #000000;
-            margin-left: auto; /* Set left margin to auto for center alignment */
-            margin-right: auto; /* Set right margin to auto for center alignment */
-        }
-
-        .paragraph {
-            margin-left: -50px; /* Adjust margin as needed */
-        }
-    </style>
-</head>
-<body>
-    <div class="col-lg-5" style="margin-left: 2%;">
-         <section class="blog py-4" id="About Us" style="margin-left: 0%;">
-            <div class="container py-md-5" style="margin-left: 10px;">
-                <div class="content-box">
-                    <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
-                    <h3 class="title mt-3">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                    <p class="paragraph mt-4">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
-                </div>
-            </div>
-        </section>
-    </div>
-    <div class="col-lg-5" style="margin-right: 0%;">
-        <section class="blog py-4" id="Services" style="margin-right: 0%;">
-            <div class="container py-md-5" style="margin-right: 10px;">
-                <div class="draggable-box">
-                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
-                    <a href="upload.html">    
-                        <div class="text">
-                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
+        <div class="col-lg-6">
+            <section class="blog py-5" id="Our Services">
+                <div class="container py-md-6" style="margin-top: 20px;">
+                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="margin-left: 60px;" />
+
+                            <a href="upload.html">
+                                <div class="blog-info">
+                                   <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
+                                   <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
-</body>
+</div>
+
+    <!-- //Products & Services -->
+
 </body>
 
 </html>
