--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
                     <div class="row justify-content-center">
                         <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
+				<div class="draggable-box">
                             <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="400" height="300" style="margin-left: 60px;" />
 
                             <a href="upload.html">
