--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
-                           <h3 class="mt-4" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+                           <h3 class="mt-4" style="color: #000000; margin-left: -70px;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
                            <p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
                         </div>
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="upload.html">
                                 <div class="blog-info">
                                    <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-                                   <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                   <p class="mt-4" style="margin-left: 60px;style="font-family: 'Calibri', Times, serif;color: black;text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 
                                 </div>
                             </a>
