--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="row">
         <div class="col-lg-6">
             <section class="core-value py-5" id="About Us">
-                <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+		    <div class="container py-md-4">
+		        <h3 class="heading mb-sm-5 mb-4 text-left" style="color: blue;">About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
                            <h3 class="mt-4" style="color: #000000; margin-left: -70px;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
@@ -133,9 +133,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </section>
         </div>
         <div class="col-lg-6">
-            <section class="blog py-5" id="Our Services">
-                <div class="container py-md-6" style="margin-top: 20px;">
-                    <h3 class="heading mb-sm-6 mb-5 text-center">Our Services</h3>
+            <section class="blog py-5" id="Services">
+		    <div class="container py-md-6" style="margin-top: 20px;">
+		        <h3 class="heading mb-sm-6 mb-5 text-center" style="color: blue;">Services</h3>
                     <div class="row justify-content-center">
                         <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
 				<div class="draggable-box">
