--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		        <h3 class="heading mb-sm-5 mb-4 text-left" style="color: blue;">About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
-                           <h3 class="mt-4" style="color: #000000; margin-left: -70px;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+                           <h3 style="margin-left: 60px;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
                            <p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
                         </div>
