--- a/index.html
+++ b/index.html
@@ -148,11 +148,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		        <div class="row justify-content-center">
 		            <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
 		                <div class="draggable-box">
-	                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="600" height="600" style="margin-left: 10px;" />
-	                    <a href="upload.html">
+	                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="474" height="400" style="margin-left: 18px;">
 	                        <div class="blog-info">
 	                            <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-	                            <p class="mt-4" style="margin-left: 60px; font-family: 'Calibri', Times, serif; color: black; text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+	                            <p class="mt-4" style="margin-left: 60px; color: black; text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 		                        </div>
 		                    </a>
 		                </div>
