--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="474" height="400" style="margin-left: 18px;">
 	                        <div class="blog-info">
 	                            <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-	                            <p class="mt-4" style="margin-left: 60px; color: black; text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+	                            <p class="mt-4" style="margin-left: 60px; text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
 		                        </div>
 		                    </a>
 		                </div>
