--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            <div class="col-lg-12 blog-center mb-lg-0 mb-sm-6 pb-lg-0 pb-md-5">
 		                <div class="draggable-box">
 	                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" class="img-fluid" alt="" width="474" height="400" style="margin-left: 18px;">
+					 <a href="upload.html">
 	                        <div class="blog-info">
 	                            <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
 	                            <p class="mt-4" style="margin-left: 60px; text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
