--- a/upload.html
+++ b/upload.html
@@ -119,6 +119,10 @@
             })
             .catch(error => console.error('Error:', error));
         }
+        function redirectToNextPage() {
+            // Redirect to the next page
+            window.location.href = 'nextpage.html';
+        }
     </script>
 </body>
 </html>
